[gd_scene load_steps=20 format=3 uid="uid://u7whawthsmbx"]

[ext_resource type="Theme" uid="uid://cxeu476d0lrtm" path="res://assets/themes/theme_1.tres" id="2_5fipb"]
[ext_resource type="Script" path="res://scripts/zs_card.gd" id="2_vxoh7"]
[ext_resource type="Texture2D" uid="uid://cs3cytn4p4emq" path="res://assets/textures/cards/card_layers/border_background_0.png" id="3_4f3c6"]
[ext_resource type="Texture2D" uid="uid://c8gv6h7lxm0hg" path="res://assets/textures/cards/type_indicator.png" id="4_glblq"]
[ext_resource type="Texture2D" uid="uid://f0rb4y2cpljp" path="res://assets/textures/cards/card_type_indicator.png" id="4_ruwno"]
[ext_resource type="FontFile" uid="uid://3wrkvjx6bpvf" path="res://assets/fonts/pxlsupersmall.ttf" id="4_y4yww"]
[ext_resource type="Texture2D" uid="uid://csnkrrpxwyrbp" path="res://assets/textures/cards/card_layers/border_0.png" id="5_m0ibl"]
[ext_resource type="Texture2D" uid="uid://bmjd2pj2nw2e4" path="res://assets/textures/cards/card_layers/back_0.png" id="8_e8kqn"]
[ext_resource type="Texture2D" uid="uid://bggkjgl2nd0su" path="res://assets/textures/cards/select_star.png" id="8_k8s6k"]
[ext_resource type="AnimationLibrary" uid="uid://b2em71kwcfw3r" path="res://assets/animations/[Global].tres" id="10_phpx1"]
[ext_resource type="AnimationLibrary" uid="uid://cv0qi3ks8dcio" path="res://assets/animations/attack_animations.tres" id="10_x686k"]
[ext_resource type="Script" path="res://scripts/attack_animations.gd" id="11_taey2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojokj"]
resource_local_to_scene = true
size = Vector2(12, 17)

[sub_resource type="Animation" id="Animation_kjpd6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card_ui/back:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("card_ui:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_82t8p"]
resource_name = "back_to_front"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card_ui/back:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("card_ui:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ywwmw"]
resource_name = "front_to_back"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card_ui/back:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("card_ui:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tw5sx"]
_data = {
"RESET": SubResource("Animation_kjpd6"),
"back_to_front": SubResource("Animation_82t8p"),
"front_to_back": SubResource("Animation_ywwmw")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rb4w7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n0p6y"]

[node name="card" type="Area2D"]
script = ExtResource("2_vxoh7")
metadata/_edit_horizontal_guides_ = [85.0, -85.0]

[node name="attack_animations" type="AnimationPlayer" parent="."]
libraries = {
"": ExtResource("10_phpx1"),
"attack_animations": ExtResource("10_x686k")
}
script = ExtResource("11_taey2")

[node name="shape" type="CollisionShape2D" parent="."]
scale = Vector2(6, 6)
shape = SubResource("RectangleShape2D_ojokj")

[node name="card_ui" type="Control" parent="."]
custom_minimum_size = Vector2(72, 102)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -51.0
offset_right = 36.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(36, 51)
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2
theme = ExtResource("2_5fipb")

[node name="animation_player" type="AnimationPlayer" parent="card_ui"]
root_node = NodePath("../..")
speed_scale = 4.0
libraries = {
"": SubResource("AnimationLibrary_tw5sx")
}

[node name="shadow" type="ColorRect" parent="card_ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -49.0
offset_right = 38.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(36, 51)
mouse_filter = 2
color = Color(0, 0, 0, 0.215686)

[node name="front" type="Control" parent="card_ui"]
material = SubResource("ShaderMaterial_rb4w7")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2

[node name="background" type="TextureRect" parent="card_ui/front"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -51.0
offset_right = 36.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(36, 51)
mouse_filter = 2
texture = ExtResource("3_4f3c6")
expand_mode = 1
stretch_mode = 5

[node name="profile" type="TextureRect" parent="card_ui/front"]
texture_filter = 1
clip_contents = true
custom_minimum_size = Vector2(12, 17)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -8.0
offset_right = 6.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6, 6)
pivot_offset = Vector2(6, 8.5)
mouse_filter = 2
expand_mode = 1
stretch_mode = 4

[node name="border" type="TextureRect" parent="card_ui/front"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -51.0
offset_right = 36.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(36, 51)
mouse_filter = 2
texture = ExtResource("5_m0ibl")
expand_mode = 1
stretch_mode = 5

[node name="type_icon" type="Sprite2D" parent="card_ui/front"]
position = Vector2(-28, -43)
texture = ExtResource("4_ruwno")
hframes = 5

[node name="hp" type="Label" parent="card_ui/front"]
clip_contents = true
layout_mode = 2
offset_left = -33.0
offset_top = -36.0
offset_right = -25.0
offset_bottom = -28.0
theme_override_colors/font_color = Color(0.996078, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.443137)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = -1
theme_override_fonts/font = ExtResource("4_y4yww")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_n0p6y")
text = "10
"

[node name="name" type="Label" parent="card_ui/front"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -52.0
offset_right = 34.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.972549, 0.396078, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.470588)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 13
text = "NNNNNNNNNN"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 1
clip_text = true

[node name="vbox" type="VBoxContainer" parent="card_ui/front"]
layout_mode = 0
offset_left = -28.0
offset_top = 28.0
offset_right = 31.0
offset_bottom = 46.0
mouse_filter = 2
theme_override_constants/separation = 1

[node name="m1_box" type="HBoxContainer" parent="card_ui/front/vbox"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="type_icon" type="Sprite2D" parent="card_ui/front/vbox/m1_box"]
position = Vector2(-1, 3)
texture = ExtResource("4_glblq")
hframes = 5

[node name="move" type="Label" parent="card_ui/front/vbox/m1_box"]
clip_contents = true
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 1, 0.47451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.0862745)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = -1
theme_override_fonts/font = ExtResource("4_y4yww")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_n0p6y")
text = "[placeholder]"

[node name="select_star" type="TextureRect" parent="card_ui/front/vbox/m1_box"]
visible = false
layout_mode = 2
texture = ExtResource("8_k8s6k")
stretch_mode = 5

[node name="m2_box" type="HBoxContainer" parent="card_ui/front/vbox"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="type_icon" type="Sprite2D" parent="card_ui/front/vbox/m2_box"]
position = Vector2(-1, 3)
texture = ExtResource("4_glblq")
hframes = 5

[node name="move" type="Label" parent="card_ui/front/vbox/m2_box"]
clip_contents = true
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 1, 0.47451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.0862745)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = -1
theme_override_fonts/font = ExtResource("4_y4yww")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_n0p6y")
text = "[placeholder]"

[node name="select_star" type="TextureRect" parent="card_ui/front/vbox/m2_box"]
visible = false
layout_mode = 2
texture = ExtResource("8_k8s6k")
stretch_mode = 5

[node name="back" type="Control" parent="card_ui"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(60, 85)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="texture" type="TextureRect" parent="card_ui/back"]
texture_filter = 1
custom_minimum_size = Vector2(12, 17)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -8.5
offset_right = 6.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6, 6)
pivot_offset = Vector2(6, 8.5)
mouse_filter = 2
mouse_default_cursor_shape = 2
texture = ExtResource("8_e8kqn")
expand_mode = 1
stretch_mode = 5

[node name="hold_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="facing_changed" from="." to="." method="_on_facing_changed"]
[connection signal="id_changed" from="." to="." method="_on_id_changed"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="animation_started" from="attack_animations" to="attack_animations" method="_on_animation_started"]
